--- a/TGMT-CBTC-EX/TGMT-CBTC-EX.csproj
+++ b/TGMT-CBTC-EX/TGMT-CBTC-EX.csproj
@@ -110,6 +110,9 @@
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
     </None>
   </ItemGroup>
+  <ItemGroup>
+    <WCFMetadata Include="Connected Services\" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
     <PostBuildEvent>
