--- a/TGMT-CBTC-EX/TGMT-CBTC-EX.csproj
+++ b/TGMT-CBTC-EX/TGMT-CBTC-EX.csproj
@@ -63,6 +63,7 @@
     <Compile Include="Patterns\StationManager.cs" />
     <Compile Include="Patterns\TrackLimit.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TimeFormatter.cs" />
     <Compile Include="UserInterface\DebugWindow.cs">
       <SubType>Form</SubType>
     </Compile>
