--- a/TGMT-CBTC-EX/TGMT-CBTC-EX.csproj
+++ b/TGMT-CBTC-EX/TGMT-CBTC-EX.csproj
@@ -73,6 +73,7 @@
     <Compile Include="UserInterface\GDIWrapper.cs" />
     <Compile Include="UserInterface\Msg.cs" />
     <Compile Include="UserInterface\TGMTPainter.cs" />
+    <Compile Include="UserInterface\Touch.cs" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="UserInterface\DebugWindow.resx">
