--- a/TGMT-CBTC-EX/Urbalis-CBTC-EX.csproj
+++ b/TGMT-CBTC-EX/Urbalis-CBTC-EX.csproj
@@ -82,16 +82,16 @@
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="AtsEx.CoreExtensions">
-      <Version>1.0.0-rc1</Version>
+      <Version>1.0.0-rc.9</Version>
     </PackageReference>
     <PackageReference Include="AtsEx.PluginHost">
-      <Version>1.0.0-rc3</Version>
+      <Version>1.0.0-rc.9</Version>
     </PackageReference>
     <PackageReference Include="Lib.Harmony">
       <Version>2.2.2</Version>
     </PackageReference>
     <PackageReference Include="ObjectiveHarmonyPatch">
-      <Version>1.0.0</Version>
+      <Version>1.1.0</Version>
     </PackageReference>
     <PackageReference Include="SlimDX">
       <Version>4.0.13.44</Version>
@@ -101,9 +101,9 @@
     </PackageReference>
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\TGMT-CBTC-EX_WCU\TGMT-CBTC-EX_WCU.csproj">
+    <ProjectReference Include="..\TGMT-CBTC-EX_WCU\Urbalis-CBTC-EX_WCU.csproj">
       <Project>{ab7ee309-f15f-4ad4-a658-d0dd210627ce}</Project>
-      <Name>TGMT-CBTC-EX_WCU</Name>
+      <Name>Urbalis-CBTC-EX_WCU</Name>
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
