--- a/TGMT-CBTC-EX_WCU/Urbalis-CBTC-EX_WCU.csproj
+++ b/TGMT-CBTC-EX_WCU/Urbalis-CBTC-EX_WCU.csproj
@@ -48,16 +48,16 @@
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="AtsEx.CoreExtensions">
-      <Version>1.0.0-rc1</Version>
+      <Version>1.0.0-rc.9</Version>
     </PackageReference>
     <PackageReference Include="AtsEx.PluginHost">
-      <Version>1.0.0-rc3</Version>
+      <Version>1.0.0-rc.9</Version>
     </PackageReference>
     <PackageReference Include="Lib.Harmony">
       <Version>2.2.2</Version>
     </PackageReference>
     <PackageReference Include="ObjectiveHarmonyPatch">
-      <Version>1.0.0</Version>
+      <Version>1.1.0</Version>
     </PackageReference>
     <PackageReference Include="SlimDX">
       <Version>4.0.13.44</Version>
