--- a/TGMT-CBTC-EX/Urbalis-CBTC-EX.csproj
+++ b/TGMT-CBTC-EX/Urbalis-CBTC-EX.csproj
@@ -78,6 +78,7 @@
   <ItemGroup>
     <EmbeddedResource Include="UserInterface\DebugWindow.resx">
       <DependentUpon>DebugWindow.cs</DependentUpon>
+      <SubType>Designer</SubType>
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
