增加手动开关门功能、门模式功能

--- a/TGMT-CBTC-EX/Urbalis-CBTC-EX.csproj
+++ b/TGMT-CBTC-EX/Urbalis-CBTC-EX.csproj
@@ -46,7 +46,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Ato.cs" />
-    <Compile Include="IniRead.cs" />
+    <Compile Include="Patterns\ConductorManager.cs" />
     <Compile Include="Patterns\MapStationManager.cs" />
     <Compile Include="Properties\Settings.Designer.cs">
       <AutoGen>True</AutoGen>
