增加信息翻页功能

--- a/TGMT-CBTC-EX/Urbalis-CBTC-EX.csproj
+++ b/TGMT-CBTC-EX/Urbalis-CBTC-EX.csproj
@@ -71,7 +71,7 @@
       <DependentUpon>DebugWindow.cs</DependentUpon>
     </Compile>
     <Compile Include="UserInterface\GDIWrapper.cs" />
-    <Compile Include="UserInterface\Msg.cs" />
+    <Compile Include="UserInterface\MsgManager.cs" />
     <Compile Include="UserInterface\TGMTPainter.cs" />
     <Compile Include="UserInterface\Touch.cs" />
   </ItemGroup>
